--- a/archives/toutiao-search/2024-02-21.md
+++ b/archives/toutiao-search/2024-02-21.md
@@ -1,59 +1,74 @@
 # 2024-02-21
 
-共 205 条
+共 219 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Feb 21 2024 12:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Feb 21 2024 13:00:56 GMT+0800 (China Standard Time) -->
 1. [台军方称不会介入大陆海警临检台船](https://so.toutiao.com/search?keyword=台军方称不会介入大陆海警临检台船)
-1. [媒体：台当局应全面交代渔船事件](https://so.toutiao.com/search?keyword=媒体：台当局应全面交代渔船事件)
+1. [网传父亲出轨儿子女友 派出所回应](https://so.toutiao.com/search?keyword=网传父亲出轨儿子女友+派出所回应)
 1. [数字赋能保障春节出行安全顺畅](https://so.toutiao.com/search?keyword=数字赋能保障春节出行安全顺畅)
 1. [山东泰山晋级亚冠8强](https://so.toutiao.com/search?keyword=山东泰山晋级亚冠8强)
-1. [养老金涨后工龄15年和30年有何差别](https://so.toutiao.com/search?keyword=养老金涨后工龄15年和30年有何差别)
-1. [终于知道秦岭为啥是南北分界线](https://so.toutiao.com/search?keyword=终于知道秦岭为啥是南北分界线)
-1. [网传父亲出轨儿子女友 派出所回应](https://so.toutiao.com/search?keyword=网传父亲出轨儿子女友+派出所回应)
+1. [媒体五问“寒假作业丢巴黎”事件](https://so.toutiao.com/search?keyword=媒体五问“寒假作业丢巴黎”事件)
+1. [一群鸟撞击玻璃后摔落而亡](https://so.toutiao.com/search?keyword=一群鸟撞击玻璃后摔落而亡)
+1. [张颂文《猎冰》今晚开播](https://so.toutiao.com/search?keyword=张颂文《猎冰》今晚开播)
 1. [央视网评“秦朗巴黎丢作业”事件](https://so.toutiao.com/search?keyword=央视网评“秦朗巴黎丢作业”事件)
 1. [官方辟谣13岁母亲厕所产弃婴](https://so.toutiao.com/search?keyword=官方辟谣13岁母亲厕所产弃婴)
+1. [午评：沪指涨1.72%剑指3000点](https://so.toutiao.com/search?keyword=午评：沪指涨1.72%剑指3000点)
 1. [郑州下雪速度赶不上扫雪车清理速度](https://so.toutiao.com/search?keyword=郑州下雪速度赶不上扫雪车清理速度)
+1. [23岁女孩患肝癌 曾患乙肝未重视](https://so.toutiao.com/search?keyword=23岁女孩患肝癌+曾患乙肝未重视)
+1. [探店实拍：7.98万比亚迪秦亏着卖吗](https://so.toutiao.com/search?keyword=探店实拍：7.98万比亚迪秦亏着卖吗)
+1. [买到烂尾楼后可以停贷吗](https://so.toutiao.com/search?keyword=买到烂尾楼后可以停贷吗)
 1. [江苏宿迁一医院门诊大厅发生垮塌](https://so.toutiao.com/search?keyword=江苏宿迁一医院门诊大厅发生垮塌)
-1. [网友喜提7.98万比亚迪秦荣耀](https://so.toutiao.com/search?keyword=网友喜提7.98万比亚迪秦荣耀)
-1. [百亿级私募巨头宁波灵均道歉](https://so.toutiao.com/search?keyword=百亿级私募巨头宁波灵均道歉)
-1. [情侣捡14万定制项链又丢弃赔4.5万](https://so.toutiao.com/search?keyword=情侣捡14万定制项链又丢弃赔4.5万)
-1. [媒体五问“寒假作业丢巴黎”事件](https://so.toutiao.com/search?keyword=媒体五问“寒假作业丢巴黎”事件)
+1. [印度网友羡慕中国卖7.98万比亚迪秦](https://so.toutiao.com/search?keyword=印度网友羡慕中国卖7.98万比亚迪秦)
 1. [史上最大力度降息意味什么](https://so.toutiao.com/search?keyword=史上最大力度降息意味什么)
 1. [男子疑借帮女童爬滑梯趁机猥亵](https://so.toutiao.com/search?keyword=男子疑借帮女童爬滑梯趁机猥亵)
-1. [媒体谈韩国医生辞职潮](https://so.toutiao.com/search?keyword=媒体谈韩国医生辞职潮)
-1. [秦PLUS DM-i官降2万元](https://so.toutiao.com/search?keyword=秦PLUS+DM-i官降2万元)
-1. [23岁女孩患肝癌 曾患乙肝未重视](https://so.toutiao.com/search?keyword=23岁女孩患肝癌+曾患乙肝未重视)
-1. [多部门已介入核查柳鑫宇自曝事件](https://so.toutiao.com/search?keyword=多部门已介入核查柳鑫宇自曝事件)
-1. [买到烂尾楼后可以停贷吗](https://so.toutiao.com/search?keyword=买到烂尾楼后可以停贷吗)
-1. [河南多高速路段禁止车辆上站](https://so.toutiao.com/search?keyword=河南多高速路段禁止车辆上站)
-1. [春节后鸡蛋价格大跳水](https://so.toutiao.com/search?keyword=春节后鸡蛋价格大跳水)
-1. [节后浙江疾控艾滋病咨询增两三倍](https://so.toutiao.com/search?keyword=节后浙江疾控艾滋病咨询增两三倍)
-1. [柳鑫宇否认私生活混乱](https://so.toutiao.com/search?keyword=柳鑫宇否认私生活混乱)
 1. [主人发烧去山里打针 狗狗一路寻找](https://so.toutiao.com/search?keyword=主人发烧去山里打针+狗狗一路寻找)
-1. [贾玲还是原来的贾玲](https://so.toutiao.com/search?keyword=贾玲还是原来的贾玲)
-1. [什么是寒假作业的“中国速度”](https://so.toutiao.com/search?keyword=什么是寒假作业的“中国速度”)
-1. [本轮河南铲冰除雪里程超10000公里](https://so.toutiao.com/search?keyword=本轮河南铲冰除雪里程超10000公里)
+1. [国家早已明确禁止师生恋](https://so.toutiao.com/search?keyword=国家早已明确禁止师生恋)
+1. [哺乳期妈妈看着奶茶馋哭了](https://so.toutiao.com/search?keyword=哺乳期妈妈看着奶茶馋哭了)
+1. [网友喜提7.98万比亚迪秦荣耀](https://so.toutiao.com/search?keyword=网友喜提7.98万比亚迪秦荣耀)
 1. [中国女游客泰国搭车险遭司机强暴](https://so.toutiao.com/search?keyword=中国女游客泰国搭车险遭司机强暴)
+1. [春节后鸡蛋价格大跳水](https://so.toutiao.com/search?keyword=春节后鸡蛋价格大跳水)
+1. [秦PLUS DM-i官降2万元](https://so.toutiao.com/search?keyword=秦PLUS+DM-i官降2万元)
+1. [节后浙江疾控艾滋病咨询增两三倍](https://so.toutiao.com/search?keyword=节后浙江疾控艾滋病咨询增两三倍)
+1. [多部门已介入核查柳鑫宇自曝事件](https://so.toutiao.com/search?keyword=多部门已介入核查柳鑫宇自曝事件)
+1. [什么是“霰”](https://so.toutiao.com/search?keyword=什么是“霰”)
+1. [布林肯引用露骨老话谈中美关系](https://so.toutiao.com/search?keyword=布林肯引用露骨老话谈中美关系)
+1. [柳鑫宇否认私生活混乱](https://so.toutiao.com/search?keyword=柳鑫宇否认私生活混乱)
+1. [什么是寒假作业的“中国速度”](https://so.toutiao.com/search?keyword=什么是寒假作业的“中国速度”)
 1. [猎冰张颂文一镜封神](https://so.toutiao.com/search?keyword=猎冰张颂文一镜封神)
-1. [专家呼吁实际利率应降到2%左右](https://so.toutiao.com/search?keyword=专家呼吁实际利率应降到2%左右)
-1. [航班延误男子花两千打车回上海上班](https://so.toutiao.com/search?keyword=航班延误男子花两千打车回上海上班)
-1. [胡塞取得开战以来最大战果](https://so.toutiao.com/search?keyword=胡塞取得开战以来最大战果)
-1. [北京龙年第一场雪为何突如其来](https://so.toutiao.com/search?keyword=北京龙年第一场雪为何突如其来)
+1. [台方称追逐大陆渔船忘了拍视频](https://so.toutiao.com/search?keyword=台方称追逐大陆渔船忘了拍视频)
+1. [兄妹连续8年回残破老家探望贴对联](https://so.toutiao.com/search?keyword=兄妹连续8年回残破老家探望贴对联)
+1. [贾玲还是原来的贾玲](https://so.toutiao.com/search?keyword=贾玲还是原来的贾玲)
 1. [福建游神穿80斤装扮通宵走22个村](https://so.toutiao.com/search?keyword=福建游神穿80斤装扮通宵走22个村)
+1. [尹锡悦批罢工医生拿民众生命作筹码](https://so.toutiao.com/search?keyword=尹锡悦批罢工医生拿民众生命作筹码)
+1. [专家呼吁实际利率应降到2%左右](https://so.toutiao.com/search?keyword=专家呼吁实际利率应降到2%左右)
+1. [雪天路滑 交警变身“推车侠”](https://so.toutiao.com/search?keyword=雪天路滑+交警变身“推车侠”)
+1. [百亿级私募巨头宁波灵均道歉](https://so.toutiao.com/search?keyword=百亿级私募巨头宁波灵均道歉)
+1. [航班延误男子花两千打车回上海上班](https://so.toutiao.com/search?keyword=航班延误男子花两千打车回上海上班)
+1. [上海夜迎暴雨雷电冰雹](https://so.toutiao.com/search?keyword=上海夜迎暴雨雷电冰雹)
+1. [养老金涨后工龄15年和30年有何差别](https://so.toutiao.com/search?keyword=养老金涨后工龄15年和30年有何差别)
+1. [脑梗小伙被好友照顾80多天后站起](https://so.toutiao.com/search?keyword=脑梗小伙被好友照顾80多天后站起)
+1. [孩子大厅玩雪致邻居滑倒电脑损坏](https://so.toutiao.com/search?keyword=孩子大厅玩雪致邻居滑倒电脑损坏)
+1. [青岛大雪后网友拍下市民上班状态](https://so.toutiao.com/search?keyword=青岛大雪后网友拍下市民上班状态)
+1. [情侣捡14万定制项链又丢弃赔4.5万](https://so.toutiao.com/search?keyword=情侣捡14万定制项链又丢弃赔4.5万)
 1. [网友：高合开了个很不好的头](https://so.toutiao.com/search?keyword=网友：高合开了个很不好的头)
+1. [胡塞取得开战以来最大战果](https://so.toutiao.com/search?keyword=胡塞取得开战以来最大战果)
+1. [男子冒雪骑车回家衣服成冰壳](https://so.toutiao.com/search?keyword=男子冒雪骑车回家衣服成冰壳)
+1. [媒体：台当局应全面交代渔船事件](https://so.toutiao.com/search?keyword=媒体：台当局应全面交代渔船事件)
+1. [终于知道秦岭为啥是南北分界线](https://so.toutiao.com/search?keyword=终于知道秦岭为啥是南北分界线)
+1. [媒体谈韩国医生辞职潮](https://so.toutiao.com/search?keyword=媒体谈韩国医生辞职潮)
+1. [河南多高速路段禁止车辆上站](https://so.toutiao.com/search?keyword=河南多高速路段禁止车辆上站)
+1. [本轮河南铲冰除雪里程超10000公里](https://so.toutiao.com/search?keyword=本轮河南铲冰除雪里程超10000公里)
+1. [北京龙年第一场雪为何突如其来](https://so.toutiao.com/search?keyword=北京龙年第一场雪为何突如其来)
 1. [谁会跟进比亚迪的“价格战”](https://so.toutiao.com/search?keyword=谁会跟进比亚迪的“价格战”)
 1. [兄妹3人进别墅工地玩 妹妹不幸溺亡](https://so.toutiao.com/search?keyword=兄妹3人进别墅工地玩+妹妹不幸溺亡)
 1. [金晨回应与胡夏恋情](https://so.toutiao.com/search?keyword=金晨回应与胡夏恋情)
-1. [兄妹连续8年回残破老家探望贴对联](https://so.toutiao.com/search?keyword=兄妹连续8年回残破老家探望贴对联)
 1. [花旗预测金价或升至3000美元/盎司](https://so.toutiao.com/search?keyword=花旗预测金价或升至3000美元/盎司)
-1. [什么是“霰”](https://so.toutiao.com/search?keyword=什么是“霰”)
 1. [媒体人：建议3月9日泰山对国安延期](https://so.toutiao.com/search?keyword=媒体人：建议3月9日泰山对国安延期)
 1. [哈马斯第一次公布战损](https://so.toutiao.com/search?keyword=哈马斯第一次公布战损)
 1. [山西部分地区出现雪霰](https://so.toutiao.com/search?keyword=山西部分地区出现雪霰)
 1. [返程遇拥堵小伙直接开直升机](https://so.toutiao.com/search?keyword=返程遇拥堵小伙直接开直升机)
 1. [男子为监控女儿学习买隐秘偷拍设备](https://so.toutiao.com/search?keyword=男子为监控女儿学习买隐秘偷拍设备)
-1. [哺乳期妈妈看着奶茶馋哭了](https://so.toutiao.com/search?keyword=哺乳期妈妈看着奶茶馋哭了)
 1. [直击多地雪后早高峰](https://so.toutiao.com/search?keyword=直击多地雪后早高峰)
 1. [冻雨落下瞬间凝结成冰](https://so.toutiao.com/search?keyword=冻雨落下瞬间凝结成冰)
 1. [郑州公租房可以买卖了？假的](https://so.toutiao.com/search?keyword=郑州公租房可以买卖了？假的)
@@ -113,7 +128,6 @@
 1. [崔康熙：鼓励球员往正向走](https://so.toutiao.com/search?keyword=崔康熙：鼓励球员往正向走)
 1. [女裁判称顺丰发丢6万元快递赔千元](https://so.toutiao.com/search?keyword=女裁判称顺丰发丢6万元快递赔千元)
 1. [灵均投资深夜致歉](https://so.toutiao.com/search?keyword=灵均投资深夜致歉)
-1. [脑梗小伙被好友照顾80多天后站起](https://so.toutiao.com/search?keyword=脑梗小伙被好友照顾80多天后站起)
 1. [媒体评女子未买玉手镯被导游赶下车](https://so.toutiao.com/search?keyword=媒体评女子未买玉手镯被导游赶下车)
 1. [飞行员谈歼-20有多难飞](https://so.toutiao.com/search?keyword=飞行员谈歼-20有多难飞)
 1. [“价格战”中值得关注的新能源车](https://so.toutiao.com/search?keyword=“价格战”中值得关注的新能源车)
